syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.frontm.frontm.proto";

package queue;

message Empty {}

message QueueParams {
    oneof previousMessages {
        string conversation = 1;
        string botId = 2;
        int64 timestamp = 3;
    }
}

message QueueInput {
    string sessionId = 1;
}

message Message {
    string id = 1;
    string content = 2;
}

message MessageList {
   repeated Message messages = 1;
}

message QueueResponse {
    bool onSatellite = 1;
    repeated QueueMessage queueMsgs = 2;
    repeated PreviousMessage previousMsgs = 3;
    string errorMessage = 4;
}

message PreviousMessage {
    string messageId = 1;
    string contentType = 2;
    int32 createdOn = 3;
    repeated string content = 4;
}

message QueueMessage {
    string userId = 1;
    string conversation = 2;
    string bot = 3;
    int32 createdOn = 4;
    string createdBy = 5;
    int32 contentType = 6;
    string messageId = 7;
    string requestUuid = 8;
    repeated MessageDetails details = 9;
    string error = 10;
}

message MapFieldEntry {
  string key = 1;
  string value = 2;
}

message MessageDetails {
    string message = 1;
    string error = 2;
//  optional google.protobuf.Any info = 3;
    repeated MapFieldEntry info = 3;
}

service QueueService {
    rpc GetMessages (QueueInput) returns (MessageList) {}
    rpc GetStreamingMessages (QueueParams) returns (stream Message) {}
    rpc GetQueueMessages (QueueParams) returns (QueueResponse) {}
    rpc GetStreamingQueueMessages (QueueParams) returns (stream QueueMessage) {}
}



